--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -32,5 +32,6 @@
   "components.v-credit-card.expiration-label": "caducidad",
   "components.v-credit-card.cvc-label": "código de seguridad",
   "components.v-credit-card.valid-label": "VÁLIDO",
-  "components.v-credit-card.valid-thru-label": "HASTA"
+  "components.v-credit-card.valid-thru-label": "HASTA",
+  "auth.welcome": "Bienvenido"
 }
